image stretching fixed and about section made responsive

--- a/style.css
+++ b/style.css
@@ -96,11 +96,11 @@
     top: -25vh;
 }
 .aboutme{
-    height:35vh;
+    height:65vh;
     background-color: lavenderblush;
 }
 .aboutme p{
-    line-height:1.8rem;
+    line-height:2rem;
     margin:1%;
 text-align: center;
 font-size: 1.2rem;
@@ -108,26 +108,26 @@ font-size: 1.2rem;
 .about{
     text-align: center;  
     padding: 1rem;
+    font-size: 4rem;
+    color:tomato;
 }
 .skillshead{
     display: flex;
     justify-content: center;
     padding: 1rem;
+    font-size: 4rem;
+    color:tomato;
 }
 .Skills{
     display: flex;
     justify-content: space-around;
     align-items: center;
-    height: 25rem;
+    height: 20rem;
     position:relative;
-   
 }
 .image{
-   width:20%;
-   height:50%;
-   display: flex;
-   flex-wrap: wrap;
-   justify-content: space-around;
+    height:11rem;
+    width:11rem;
 }
 .contacts{
     background-color: black;
@@ -152,13 +152,34 @@ font-size: 1.2rem;
     justify-content: center;
 align-items: center;
 }
-
-.Skillshead{
-    font-size: 3rem;
+@media only screen and (max-width:814px)
+{
+    .aboutme p{
+        font-size: 1rem;
+    }
 }
-@media only screen and (max-width: 550px){
+@media only screen and (max-width:720px) {
+    .image{
+        width:8rem;
+    }
+@media only screen and (max-width:630px)
+{.about{
+    font-size:2rem ;
+}
+.skillshead{
+    font-size:2rem ;
+}
+    .aboutme p{
+        font-size: 1rem;
+    }
+
+@media only screen and (max-width: 552px){
+    .aboutme{
+        height:50vh;
+    }
     .aboutme p{
         font-size: 0.8rem;
+        line-height: 1.5rem;
     }
     .Skills{
         flex-direction: column;
@@ -170,7 +191,9 @@ align-items: center;
     .left .gif{
         visibility: hidden;
     }
-       
+       .image{
+           height:8rem;
+       }
     
 }
 @media only screen and (max-width:370px)
